# manifold

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  README.md
app/src/: args.h  boolean.cpp  cross.cpp  extrude.cpp  hull.cpp  info.cpp  levelset.cpp  meshid.cpp  primitives.cpp  properties.cpp  slice.cpp  smooth.cpp  transform.cpp  warp.cpp
bindings/wasm/lib/: worker.test.ts
src/: boolean_result.cpp  parallel.h
